# src/static/openapi.yaml
@@ -31,7 +31,7 @@ paths:
           required: false
           schema:
             type: boolean
-          description: whether the files come with the full content (true) or no (false, default)
+          description: whether the files come with the full content in base64 (true) or no (false, default)
       responses:
         '200':
           description: Successful response
@@ -382,6 +382,12 @@ paths:
           schema:
             type: integer
           description: The ID of the scheduled task to retrieve
+        - name: full_content
+          in: query
+          required: false
+          schema:
+            type: boolean
+          description: whether the files come with the full content in base64 (true) or no (false, default)
       responses:
         '200':
           description: Successful operation
